--- a/sub3suite/src/enums/cidr/CidrEnum.ui
+++ b/sub3suite/src/enums/cidr/CidrEnum.ui
@@ -31,7 +31,7 @@
      <item>
       <widget class="QLabel" name="labelOutput">
        <property name="text">
-        <string>Out:</string>
+        <string>OUT:</string>
        </property>
       </widget>
      </item>
@@ -45,7 +45,7 @@
        </property>
        <item>
         <property name="text">
-         <string>PREFIX</string>
+         <string>CIDR INFO</string>
         </property>
        </item>
       </widget>
@@ -53,7 +53,7 @@
      <item>
       <widget class="QLabel" name="labelModule">
        <property name="text">
-        <string>Module:</string>
+        <string>MODULE:</string>
        </property>
       </widget>
      </item>
@@ -232,7 +232,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QTreeView" name="treeResults">
+         <widget class="QTreeView" name="treeViewResults">
           <property name="contextMenuPolicy">
            <enum>Qt::CustomContextMenu</enum>
           </property>
