--- a/sub3suite/src/enums/email/EmailEnum.ui
+++ b/sub3suite/src/enums/email/EmailEnum.ui
@@ -31,7 +31,7 @@
      <item>
       <widget class="QLabel" name="labelModule">
        <property name="text">
-        <string>Module:</string>
+        <string>MODULE:</string>
        </property>
       </widget>
      </item>
@@ -222,7 +222,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QTreeView" name="treeResults">
+         <widget class="QTreeView" name="treeViewResults">
           <property name="acceptDrops">
            <bool>false</bool>
           </property>
