refactored NS-Enum & MX-Enum

--- a/sub3suite/src/enums/mx/MXEnum.ui
+++ b/sub3suite/src/enums/mx/MXEnum.ui
@@ -31,7 +31,7 @@
      <item>
       <widget class="QLabel" name="labelOut">
        <property name="text">
-        <string>Out:</string>
+        <string>OUT:</string>
        </property>
       </widget>
      </item>
@@ -53,7 +53,7 @@
      <item>
       <widget class="QLabel" name="labelModule">
        <property name="text">
-        <string>Module:</string>
+        <string>MODULE:</string>
        </property>
       </widget>
      </item>
@@ -250,7 +250,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QTreeView" name="treeResults">
+         <widget class="QTreeView" name="treeViewResults">
           <property name="contextMenuPolicy">
            <enum>Qt::CustomContextMenu</enum>
           </property>
