addind project actions

--- a/sub3suite/src/engines/active/Active.ui
+++ b/sub3suite/src/engines/active/Active.ui
@@ -32,6 +32,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
      <item>
+      <widget class="QLabel" name="labelOUT">
+       <property name="text">
+        <string>OUT:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QComboBox" name="comboBoxOption">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
