--- a/sub3suite/src/engines/ssl/Ssl.ui
+++ b/sub3suite/src/engines/ssl/Ssl.ui
@@ -29,6 +29,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QLabel" name="labelOUT">
+       <property name="text">
+        <string>OUT:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QComboBox" name="comboBoxOutput">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -50,7 +57,7 @@
        </property>
        <item>
         <property name="text">
-         <string>Subdomains</string>
+         <string>Alt Names</string>
         </property>
        </item>
        <item>
